Cleaned up comment to make it more helpful
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@7447 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/motor-interlock.template
+++ b/pcds_motionApp/Db/motor-interlock.template
@@ -23,8 +23,8 @@
 # C, D, E, ... 
 # L					# L:	Calculation Input
 #
-# Hint: To make your CalcFault monitor a PV and process whenever
-#	it changes, use CPP.
+# Hint: To make your CalcFault record monitor it's input PV's and
+# process whenever an input changes, use CPP.
 # Example:
 #	A = "CXI:IOC:CTRL:Beam:Attenuated CPP"
 #	C = "CXI:IOC:CTRL:Configuration CPP"
