--- a/pcds_motionApp/Db/mcode.template
+++ b/pcds_motionApp/Db/mcode.template
@@ -1314,6 +1314,15 @@ record(stringout, "$(cont):SL") {
   field(SCAN, "Passive")
 }
 
+record( dfanout, "$(cont):EMER_STOP" )
+{
+	field( DESC, "Emergency Stop" )
+	field( DOL,  1 )
+	field( OMSL, "closed_loop" )
+	field( OUTA, "$(cont).STOP" )
+	field( OUTB, "$(cont):STOP" )
+}
+
 record(stringout, "$(cont):STOP") {
   field(DESC, "Stop")
   field(DTYP, "stream")
