Added P1 to mcode protocol to allow for easier retrieval P1 is the motor variable set to P after every move
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@7729 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/mcode.template
+++ b/pcds_motionApp/Db/mcode.template
@@ -728,6 +728,13 @@ record(stringin, "$(cont):P") {
   field(SCAN, "Passive")
 }
 
+record(stringin, "$(cont):P1") {
+  field(DESC, "Autosave Position")
+  field(DTYP, "stream")
+  field(INP, "@mcode.proto GET_P1 M$(M) $(addr)")
+  field(SCAN, "Passive")
+}
+
 record(stringout, "$(cont):SET_P") {
   field(DESC, "Set Position")
   field(DTYP, "stream")
