Modified dfanout record for EMER_STOP so it could load in VDCT
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@8889 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/mcode.template
+++ b/pcds_motionApp/Db/mcode.template
@@ -1321,13 +1321,13 @@ record(stringout, "$(cont):SL") {
   field(SCAN, "Passive")
 }
 
-record( dfanout, "$(cont):EMER_STOP" )
+record(dfanout, "$(cont):EMER_STOP" )
 {
-	field( DESC, "Emergency Stop" )
-	field( DOL,  1 )
-	field( OMSL, "closed_loop" )
-	field( OUTA, "$(cont).STOP" )
-	field( OUTB, "$(cont):STOP" )
+  field( DESC, "Emergency Stop" )
+  field( DOL,  "1" )
+  field( OMSL, "closed_loop" )
+  field( OUTA, "$(cont).STOP" )
+  field( OUTB, "$(cont):STOP" )
 }
 
 record(stringout, "$(cont):STOP") {
