1. Added status_update.db to spread and pace the status updates by dispatching    events one after another, with indefinately setable delays in between
2. Changed the way to update motor status from periodic scan to listening
   to a particular event; force the records to initialize upon IOC bootup
   (pcds_motor_ims.template)

3. Changed "CPP" to "NPP" to avoid the STATUS record getting stuck in
   alarm while the associated motor record has no alarm (motor-status.template)

4. Force the motor record to update after clearing the power up flag and
   the error code (mcode.template)



git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@9982 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -24,6 +24,8 @@ DB += sim-motor.template
 DB += table-protection.template
 DB += newall-shg-a2.template
 
+DB += status_update.db
+
 #
 # Create and install archive templates and sample substitutions
 #
