Expanded list of fields saved by autosave to include VELO, ACCL, PREC and several more
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@10049 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/autosave_motor_settings.template
+++ b/pcds_motionApp/Db/autosave_motor_settings.template
@@ -1,13 +1,19 @@
 # Autosave position values for motor record 
-# TODO: Review this list
 
-$(MOTOR).DHLM
-$(MOTOR).DLLM
-$(MOTOR).S
-$(MOTOR).TWV
-$(MOTOR).DESC
+$(MOTOR).ACCL
+$(MOTOR).BACC
 $(MOTOR).BDST
-$(MOTOR).SBAK
+$(MOTOR).BVEL
+$(MOTOR).DESC
+$(MOTOR).DHLM
 $(MOTOR).DIR
+$(MOTOR).DLLM
+$(MOTOR).EGU
+$(MOTOR).MRES
 $(MOTOR).OFF
-
+$(MOTOR).PREC
+$(MOTOR).SBAK
+$(MOTOR).TWV
+$(MOTOR).UREV
+$(MOTOR).VBAS
+$(MOTOR).VELO
