Added latest ims_bootup.mcode controller program for autosave
Added new MCode access features on screens for upcoming motor software:
P1 - saved position 
HB - hearbeat monitor
SD - slip save deadband (currently DB*4)
NS - number of saves
R1 - timer counter
All read at bootup

Added flnk after clear error code to check error flag

Added some older modification to 6 motor test screen



git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@10080 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/mcode.template
+++ b/pcds_motionApp/Db/mcode.template
@@ -440,7 +440,8 @@ record(stringout, "$(cont):CLEAR_ER") {
 record(fanout, "$(cont):ERFAN") {
   field(DESC, "Update Error Code & Status")
   field(LNK1, "$(cont):ER")
-  field(LNK2, "$(cont)")
+  field(LNK2, "$(cont):EF")
+  field(LNK3, "$(cont)")
   field(SCAN, "Passive")
 }
 
@@ -1357,6 +1358,27 @@ record(stringout, "$(cont):SET_PU") {
   field(OUT, "@mcode.proto SET_PU M$(M) $(addr)")
   field(SCAN, "Passive")
   field(FLNK, "$(cont):PUFAN")
+}
+
+record(stringin, "$(cont):HB") {
+  field(DESC, "Heartbeat")
+  field(DTYP, "stream")
+  field(INP, "@mcode.proto GET_HB M$(M) $(addr)")
+  field(SCAN, "Passive")
+}
+
+record(stringin, "$(cont):NS") {
+  field(DESC, "Number of Saves")
+  field(DTYP, "stream")
+  field(INP, "@mcode.proto GET_NS M$(M) $(addr)")
+  field(SCAN, "Passive")
+}
+
+record(stringin, "$(cont):SD") {
+  field(DESC, "Save Deadband")
+  field(DTYP, "stream")
+  field(INP, "@mcode.proto GET_SD M$(M) $(addr)")
+  field(SCAN, "Passive")
 }
 
 record(fanout, "$(cont):PUFAN") {
