Changed from STUP back to PROC
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@10238 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -34,7 +34,7 @@ record(bo,"$(P)$(M):Update")
 {
 	field(DESC,"Force Status Update")
 	field(VAL, "1")
-	field(OUT, "$(P)$(M).STUP")
+	field(OUT, "$(P)$(M).PROC")
 	field(SCAN,"Event")
 	field(EVNT,"$(UEvent)")
 }
