--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -6,7 +6,6 @@ grecord(motor,"$(P)$(M)")
 	field(DIR, "$(DIR)")
 	field(SREV,"$(SREV)")
 	field(UREV,"$(UREV)")
-	field(UEIP,"No")
 	field(S,   "$(SP)")
 	field(SMAX,"$(SMAX)")
 	field(SBAS,"$(SBAS)")
@@ -27,14 +26,46 @@ grecord(motor,"$(P)$(M)")
 	field(MENV,"PCDS_MOTION")
 	field(MPGM,"/pcds_motionApp/src/ims_bootup.mcode")
 	field(SDLT,"30")
-        field(FOFF,"Frozen")
+	field(FOFF,"Frozen")
+	field(HVEL,"$(HVEL)")
+	field(HBAS,"$(HBAS)")
+	field(HMDR,"$(HMDR)")
+	field(HMTP,"$(HMTP)")
+	field(DVER,"$(DVER)")
 	field(PINI,"YES")
+	field(FLNK,"$(P)$(M):TS")
 }
-record(bo,"$(P)$(M):Update")
+
+record(stringin, "$(P)$(M):TS") {
+	field(DESC,"Time Stamp of Last Update")
+	field(DTYP,"Soft Timestamp")
+	field(TSEL,"$(P)$(M).TIME")
+	field(INP, "@%b %d %R:%S %Y")
+	field(FLNK,"$(P)$(M):UTCS")
+}
+
+record(stringin, "$(P)$(M):UTCS") {
+	field(DESC,"UTC String of Last Update")
+	field(DTYP,"Soft Timestamp")
+	field(TSEL,"$(P)$(M).TIME")
+	field(INP, "@%s")
+	field(FLNK,"$(P)$(M):UTC")
+}
+
+record(scalcout, "$(P)$(M):UTC") {
+	field(DESC,"UTC Seconds of Last Update")
+	field(INAA,"$(P)$(M):UTCS")
+	field(CALC,"INT(AA)")
+}
+
+record(calcout,"$(P)$(M):Update")
 {
 	field(DESC,"Force Status Update")
-	field(VAL, "1")
+	field(INPA,"$(P)$(M).DMOV")
 	field(OUT, "$(P)$(M).PROC")
+	field(CALC,"A")
+	field(OOPT,"When Non-zero")
+	field(DOPT,"Use CALC")
 	field(SCAN,"Event")
 	field(EVNT,"$(UEvent)")
 }
