Added SMAX, SBAS, HBAS
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@10450 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/ims_motor_settings.template
+++ b/pcds_motionApp/Db/ims_motor_settings.template
@@ -4,6 +4,8 @@
 $(MOTOR).DHLM
 $(MOTOR).DLLM
 $(MOTOR).S
+$(MOTOR).SMAX
+$(MOTOR).SBAS
 $(MOTOR).TWV
 $(MOTOR).DESC
 $(MOTOR).BDST
@@ -15,4 +17,5 @@ $(MOTOR).SDLT
 $(MOTOR):Update.SCAN
 $(MOTOR).RDBD
 $(MOTOR).HVEL
+$(MOTOR).HBAS
 $(MOTOR).HMDR
