Added MT - Motor settling time
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@10460 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/archive_motor-mc.template
+++ b/pcds_motionApp/Db/archive_motor-mc.template
@@ -50,6 +50,7 @@ $(MOTOR):LM		30
 $(MOTOR):EE		30
 $(MOTOR):EL		30
 $(MOTOR):MS		30
+$(MOTOR):MT		30
 $(MOTOR):NS		30
 $(MOTOR):DB		30
 $(MOTOR):SM		30
