Added ERES and UEIP to template file Added default parameters
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@10927 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -1,11 +1,11 @@
-grecord(motor,"$(P)$(M)")
+record(motor,"$(P)$(M)")
 {
 	field(DESC,"$(DESC)")
 	field(DTYP,"$(DTYP)")
 	field(OUT, "#C$(C) S$(S) @")
 	field(DIR, "$(DIR)")
-	field(SREV,"$(SREV)")
-	field(UREV,"$(UREV)")
+	field(SREV,"$(SREV=51200)")
+	field(UREV,"$(UREV=1)")
 	field(S,   "$(SP)")
 	field(SMAX,"$(SMAX)")
 	field(SBAS,"$(SBAS)")
@@ -27,10 +27,12 @@ grecord(motor,"$(P)$(M)")
 	field(MPGM,"/pcds_motionApp/src/ims_bootup.mcode")
 	field(SDLT,"30")
 	field(FOFF,"Frozen")
-	field(HVEL,"$(HVEL)")
-	field(HBAS,"$(HBAS)")
-	field(HMDR,"$(HMDR)")
+	field(HVEL,"$(HVEL=2)")
+	field(HBAS,"$(HBAS=1)")
+	field(HMDR,"$(HMDR=Pos)")
 	field(HMTP,"$(HMTP)")
+	field(ERES,"$(ERES=0)")
+	field(UEIP,"$(UEIP=No)")
 	field(DVER,"$(DVER)")
 	field(PINI,"YES")
 	field(FLNK,"$(P)$(M):TS")
