Added the scalcout back after adding the appropriate dbd support files to IMS IOCs Changed idle archiving to once per day, but monitor any changes
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@11088 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -51,14 +51,14 @@ record(stringin, "$(P)$(M):UTCS") {
 	field(DTYP,"Soft Timestamp")
 	field(TSEL,"$(P)$(M).TIME")
 	field(INP, "@%s")
-#	field(FLNK,"$(P)$(M):UTC")
+	field(FLNK,"$(P)$(M):UTC")
 }
 
-#record(scalcout, "$(P)$(M):UTC") {
-#	field(DESC,"UTC Seconds of Last Update")
-#	field(INAA,"$(P)$(M):UTCS")
-#	field(CALC,"INT(AA)")
-#}
+record(scalcout, "$(P)$(M):UTC") {
+	field(DESC,"UTC Seconds of Last Update")
+	field(INAA,"$(P)$(M):UTCS")
+	field(CALC,"INT(AA)")
+}
 
 record(calcout,"$(P)$(M):Update")
 {
