Added SAVED_RAW and SAVED_P PVs to archive list Fixed STATUS PV alarm status
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@11130 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/archive_motor-mc.template
+++ b/pcds_motionApp/Db/archive_motor-mc.template
@@ -67,3 +67,7 @@ $(MOTOR):SN	86400           monitor
 $(MOTOR):VE	86400           monitor
 $(MOTOR):VR	86400           monitor
 
+# position archiving
+$(MOTOR):SAVED_RAW	86400           monitor
+$(MOTOR):SAVED_P	86400           monitor
+
