Added defaults to clean up sub files: $(DTYP=MDrivePlus) $(S=0) $(DLY=0) $(PREC=4)
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@11138 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -1,8 +1,8 @@
 record(motor,"$(P)$(M)")
 {
 	field(DESC,"$(DESC)")
-	field(DTYP,"$(DTYP)")
-	field(OUT, "#C$(C) S$(S) @")
+	field(DTYP,"$(DTYP=MDrivePlus)")
+	field(OUT, "#C$(C) S$(S=0) @")
 	field(DIR, "$(DIR)")
 	field(SREV,"$(SREV=51200)")
 	field(UREV,"$(UREV=1)")
@@ -15,8 +15,8 @@ record(motor,"$(P)$(M)")
 	field(RTRY,"1")
 	field(SBAK,"$(SBAS)")
 	field(BACC,"$(ACCL)")
-	field(DLY, "$(DLY)")
-	field(PREC,"$(PREC)")
+	field(DLY, "$(DLY=0)")
+	field(PREC,"$(PREC=4)")
 	field(EGU, "$(EGU)")
 	field(DHLM,"$(DHLM)")
 	field(DLLM,"$(DLLM)")
