Added ACCL and RTRY to general autosave IMS template
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@11157 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/ims_motor_settings.template
+++ b/pcds_motionApp/Db/ims_motor_settings.template
@@ -6,6 +6,7 @@ $(MOTOR).DLLM
 $(MOTOR).S
 $(MOTOR).SMAX
 $(MOTOR).SBAS
+$(MOTOR).ACCL
 $(MOTOR).TWV
 $(MOTOR).DESC
 $(MOTOR).BDST
@@ -16,6 +17,7 @@ $(MOTOR).PDBD
 $(MOTOR).SDLT
 $(MOTOR):Update.SCAN
 $(MOTOR).RDBD
+$(MOTOR).RTRY
 $(MOTOR).HVEL
 $(MOTOR).HBAS
 $(MOTOR).HMDR
