Added default HMTP=Encoder to clean up sub files some more, as this is the most common setup
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@11274 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -30,7 +30,7 @@ record(motor,"$(P)$(M)")
 	field(HVEL,"$(HVEL=2)")
 	field(HBAS,"$(HBAS=1)")
 	field(HMDR,"$(HMDR=Pos)")
-	field(HMTP,"$(HMTP)")
+	field(HMTP,"$(HMTP=Encoder)")
 	field(ERES,"$(ERES=0)")
 	field(UEIP,"$(UEIP=No)")
 	field(DVER,"$(DVER)")
