Added MODEL PV for motors to help clarify beyond DESC field, e.g. VT-50, PLS-85
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@12453 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/motor-status.template
+++ b/pcds_motionApp/Db/motor-status.template
@@ -68,6 +68,11 @@ record(stringout, "$(MOT):REV_MEANS") {
   field(VAL, "$(REV_MEANS)")
 }
 
+record(stringout, "$(MOT):MODEL") {
+  field(DESC, "Motor vendor model.")
+  field(VAL, "$(MODEL=NA)")
+}
+
 record(bo, "$(MOT):SET_ZERO") {
   field(DESC, "Write 1 to set position.")
   field(FLNK, "$(MOT):SET_ZERO_1 PP")
