Added Version numbers to MCode programs, allows for separate programs in motors of same IOC Updated pcds_motor template to use DVER Added universal usr motor settings template Added XIP trigger MCode program, separated variable declarations and assignments
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@12735 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -24,7 +24,7 @@ record(motor,"$(P)$(M)")
 	field(TWV, "1")
 	field(IMS, "1")
 	field(MENV,"PCDS_MOTION")
-	field(MPGM,"/pcds_motionApp/src/ims_bootup.mcode")
+	field(MPGM,"/pcds_motionApp/src/ims_bootup_V$(DVER).mcode")
 	field(SDLT,"30")
 	field(FOFF,"Frozen")
 	field(HVEL,"$(HVEL=2)")
