--- a/pcds_motionApp/Db/usr_motor_settings.template
+++ b/pcds_motionApp/Db/usr_motor_settings.template
@@ -19,5 +19,12 @@ $(MOTOR).UREV
 $(MOTOR).EGU
 $(MOTOR).SMAX
 $(MOTOR).SBAS
+$(MOTOR).ACCL
 $(MOTOR):FW_MEANS
 $(MOTOR):REV_MEANS
+$(MOTOR).RTRY
+$(MOTOR).HVEL
+$(MOTOR).HBAS
+$(MOTOR).HMDR
+$(MOTOR).ERES
+$(MOTOR):MODEL
