R2.6.0 release, updated for git workflow

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -29,19 +29,19 @@ DB += status_update.db
 #
 # Create and install archive templates and sample substitutions
 #
-ARCHIVE	+= archive_clinometer.template
-ARCHIVE	+= archive_motor.template
-ARCHIVE	+= archive_motor-mc.template
-ARCHIVE	+= archive_newall-shg-a2.template
+ARCHIVE	+= archive_clinometer.tpl-arch
+ARCHIVE	+= archive_motor.tpl-arch
+ARCHIVE	+= archive_motor-mc.tpl-arch
+ARCHIVE	+= archive_newall-shg-a2.tpl-arch
 
 #
 # Create and install autosave templates and sample substitutions
 #
-REQ	+= autosave_clinometer.template
-REQ	+= autosave_motor_positions.template
-REQ	+= autosave_motor_settings.template
-REQ	+= autosave_motor_ilk.template
-REQ	+= ims_motor_settings.template
+REQ	+= autosave_clinometer.tpl-req
+REQ	+= autosave_motor_positions.tpl-req
+REQ	+= autosave_motor_settings.tpl-req
+REQ	+= autosave_motor_ilk.tpl-req
+REQ	+= ims_motor_settings.tpl-req
 
 
 include $(TOP)/configure/RULES
